added new animations

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     <p>Only you can a <a href="./index.html#donate"><span>make a change</span></a> to help our oceans ecosystem, not only from the pollution but to help preserve the oceans wildlife, it's not too late to make a difference!</p>
                 </div>
             </section>
-            <!-- ocean waves animation -->
-            <div class="waves-container">
+            <!-- animations -->
+            <div class="waves">
                 <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRation="none" shape-rendering="auto">
                     <defs>
                         <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
@@ -180,6 +180,12 @@
                         <use xlink:href="#wave-animation" x="50" y="7" fill="#102f39"/>
                     </g>
                 </svg>
+            </div>
+            <div class="foreground">
+                <img draggable="false" class="pier" src="./assets/pier.webp" alt="">
+                <div class="boat-container">
+                    <img draggable="false" class="fishing-boat" src="./assets/fishing_boat.webp" alt="">
+                </div>
             </div>
             <!-- footer -->
             <footer>
