added new animations, and other minor changes

--- a/index.html
+++ b/index.html
@@ -182,9 +182,14 @@
                 </svg>
             </div>
             <div class="foreground">
-                <img draggable="false" class="pier" src="./assets/pier.webp" alt="">
+                <img class="pier" draggable="false" src="./assets/pier.webp" alt="">
+
                 <div class="boat-container">
-                    <img draggable="false" class="fishing-boat" src="./assets/fishing_boat.webp" alt="">
+                    <img class="fishing-boat" draggable="false" src="./assets/fishing_boat.webp" alt="">
+                </div>
+
+                <div class="no-fishing-container">
+                    <img class="no-fishing" draggable="false" src="./assets/no_fishing_sign.webp" alt="">
                 </div>
             </div>
             <!-- footer -->
@@ -204,6 +209,7 @@
                         <li>fax</li>
                         <li>email</li>
                         <li>phone</li>
+                        <li>contact form</li>
                     </ul>
                 </div>
                 <div class="section">
