minor adjustments to animations

--- a/index.html
+++ b/index.html
@@ -162,34 +162,36 @@
             </div>
             <!-- make a change -->
             <section>
-                <div class="banner">
+                <div class="banner no-margin">
                     <h2>make a change</h2>
                     <p>Only you can a <a href="./index.html#donate"><span>make a change</span></a> to help our oceans ecosystem, not only from the pollution but to help preserve the oceans wildlife, it's not too late to make a difference!</p>
                 </div>
             </section>
             <!-- animations -->
-            <div class="waves">
-                <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRation="none" shape-rendering="auto">
-                    <defs>
-                        <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
-                    </defs>
-                    <g class="waves-group">
-                        <use xlink:href="#wave-animation" x="48" y="0" fill="#385964"/>
-                        <use xlink:href="#wave-animation" x="5" y="2" fill="#123642"/>
-                        <use xlink:href="#wave-animation" x="52" y="5" fill="#094357"/>
-                        <use xlink:href="#wave-animation" x="50" y="7" fill="#102f39"/>
-                    </g>
-                </svg>
-            </div>
-            <div class="foreground">
-                <img class="pier" draggable="false" src="./assets/pier.webp" alt="">
-
-                <div class="boat-container">
-                    <img class="fishing-boat" draggable="false" src="./assets/fishing_boat.webp" alt="">
+            <div class="animations">
+                <div class="waves">
+                    <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRation="none" shape-rendering="auto">
+                        <defs>
+                            <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
+                        </defs>
+                        <g class="waves-group">
+                            <use xlink:href="#wave-animation" x="48" y="0" fill="#385964"/>
+                            <use xlink:href="#wave-animation" x="5" y="2" fill="#123642"/>
+                            <use xlink:href="#wave-animation" x="52" y="5" fill="#094357"/>
+                            <use xlink:href="#wave-animation" x="50" y="7" fill="#102f39"/>
+                        </g>
+                    </svg>
                 </div>
-
-                <div class="no-fishing-container">
-                    <img class="no-fishing" draggable="false" src="./assets/no_fishing_sign.webp" alt="">
+                <div class="foreground">
+                    <img class="pier" draggable="false" src="./assets/pier.webp" alt="">
+    
+                    <div class="boat-container">
+                        <img class="fishing-boat" draggable="false" src="./assets/fishing_boat.webp" alt="">
+                    </div>
+    
+                    <div class="no-fishing-container">
+                        <img class="no-fishing" draggable="false" src="./assets/no_fishing_sign.webp" alt="">
+                    </div>
                 </div>
             </div>
             <!-- footer -->
