--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-title" content="Aquatica"/>
     <meta name="description" content="Explore the wonders of the ocean with Aquatica, where we take you on an adventure through the incredible aquatic life and mysteries within ours oceans">
-    <meta name="theme-color" content="#031046">
+    <meta name="theme-color" content="#062f3d">
     <title>Aquatica | Deep Sea Exploration</title>
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
