--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="right">
                     <h2>risks of overfishing</h2>
                     
-                    <p>Fishing is one of the worlds largest industries, and it is indeed a very important part of our lives, as fish provide a variety of nutrients, protein and omega-3. But issues start to arise when we fish start to get depleted faster than they can repopulate, which can lead to a wide range of issues, which can eventually even lead to them being a part of the endagered or extintct list.</p>
+                    <p>Fishing is one of the worlds largest industries, and it is indeed a very important part of our lives, as fish provide a variety of nutrients, protein and omega-3. But issues start to arise when fish start to get depleted faster than they can repopulate, which can lead to a wide range of issues, which can eventually even lead to them being a part of the endagered or extintct list.</p>
 
                     <p>This causes even further issues, where boats inadvertently catch other fish that they aren't procuring which in turn get discarded, and all this can lead to issues with other population of marine life that rely on certain fish to survive and thrive.</p>
                 </div>
@@ -150,7 +150,7 @@
                 <div class="left">
                     <h2>ocean pollution</h2>
 
-                    <p>Ocean is a serious issue that affects not only marine life but us too, as it causes not only waste to wash ashore to our beaches, but it also can cause chemical pollution in the ocean, which is detremental to us as a whole but also to all the marine that inhabit the oceans.</p>
+                    <p>Ocean pollution is a serious issue that affects not only marine life but us too, as it causes not only waste to wash ashore to our beaches, but it also can cause chemical pollution in the ocean, which is detremental to us as a whole but also to all the marine that inhabit the oceans.</p>
 
                     <p>You may not know this but millions of rubbish washes ashore every year. It's imporant to be aware of this, so that we can not only keep our beaches safe and clean but to ensure that sea life like turtles and seals, don't get tangled up in rubbish which can cause serious harm to them.</p>
 
