added fetch priority to hero img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <!-- hero -->
         <div class="hero">
-            <img width="1920" height="1080" draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
+            <img fetchpriority="high" width="1920" height="1080" draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
             <h1 class="logo">aquatica</h1>
         </div>
         <main>
