--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Explore the wonders of the ocean with Aquatica, where we take you on an adventure through the incredible aquatic life and mysteries within ours oceans">
     <meta name="theme-color" content="#062f3d">
     <title>Aquatica | Deep Sea Exploration</title>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
-    <link rel="shortcut icon" href="/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
-    <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg"/>
+    <link rel="shortcut icon" href="./favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png"/>
+    <link rel="manifest" href="./site.webmanifest"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
