--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Discover marine conservation efforts, learn about endangered ocean species, and find ways to protect coral reefs and marine ecosystems. Join the fight against ocean pollution and overfishing">
     <meta name="apple-mobile-web-app-title" content="Aquatica"/>
     <meta name="theme-color" content="#062f3d">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:site_name" content="Aquatica"/>
+    <meta property="og:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
+    <meta property="og:description" content="Discover marine conservation efforts, learn about endangered ocean species, and find ways to protect coral reefs and marine ecosystems. Join the fight against ocean pollution and overfishing">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Roxaski/Aquatica/main/assets/open_graph/og_index.jpg">
+    <meta property="og:image:alt" content="Aquatica">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://roxaski.github.io/Aquatica/"/>
+    <meta property="og:type" content="website"/>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
