--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- Hero Image -->
         <div class="hero">
-            <img class="bg" fetchpriority="high" draggable="false" 
+            <img width="1920" height="1080" class="bg" fetchpriority="high" draggable="false" 
             src="./assets/index/ocean_bg_extra_large.webp"
             srcset="./assets/index/ocean_bg_small.webp 480w,
                     ./assets/index/ocean_bg_medium.webp 800w,
@@ -53,7 +53,7 @@
             <section>
                 <div class="grid-container">
                     <div class="left">
-                        <img fetchpriority="high" draggable="false"
+                        <img width="1920" height="1080" fetchpriority="high" draggable="false"
                         src="./assets/index/great_barrier_reef_extra_large.webp" 
                         srcset="./assets/index/great_barrier_reef_small.webp 480w,
                                 ./assets/index/great_barrier_reef_medium.webp 800w,
@@ -83,7 +83,7 @@
                         <p>As you can see this wonderful place is important to the preservation of our ocean, and you can help to make a change.</p>
                     </div>
                     <div class="right">
-                        <img loading="lazy" draggable="false" 
+                        <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/barrier_reef_fish_extra_large.webp" 
                         srcset="./assets/index/barrier_reef_fish_small.webp 480w,
                                 ./assets/index/barrier_reef_fish_medium.webp 800w,
@@ -115,7 +115,7 @@
             <section>
                 <div class="grid-container">
                     <div class="left">
-                        <img loading="lazy" draggable="false" 
+                        <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/sea_turtle_extra_large.webp"
                         srcset="./assets/index/sea_turtle_small.webp 480w,
                                 ./assets/index/sea_turtle_medium.webp 800w,
@@ -147,7 +147,7 @@
                     </div>
 
                     <div class="right">
-                        <img loading="lazy" draggable="false" 
+                        <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/whale_shark_extra_large.webp"
                         srcset="./assets/index/whale_shark_small.webp 480w,
                                 ./assets/index/whale_shark_medium.webp 800w,
@@ -198,7 +198,7 @@
             </section>
                 <div class="grid-container">
                     <div class="left">
-                        <img loading="lazy" draggable="false" 
+                        <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/fishing_boats_extra_large.webp"
                         srcset="./assets/index/fishing_boats_small.webp 480w,
                                 ./assets/index/fishing_boats_medium.webp 800w,
@@ -228,7 +228,7 @@
                     </div>
 
                     <div class="right">
-                        <img loading="lazy" draggable="false" 
+                        <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/beach_pollution_extra_large.webp"
                         srcset="./assets/index/beach_pollution_small.webp 480w,
                                 ./assets/index/beach_pollution_medium.webp 800w,
@@ -268,11 +268,11 @@
                     <img class="pier" loading="lazy" draggable="false" src="./assets/animations/pier.webp" alt="">
     
                     <div class="boat-container">
-                        <img class="fishing-boat" draggable="false" src="./assets/animations/fishing_boat.webp" alt="">
+                        <img loading="lazy" class="fishing-boat" draggable="false" src="./assets/animations/fishing_boat.webp" alt="">
                     </div>
     
                     <div class="no-fishing-container">
-                        <img class="no-fishing" draggable="false" src="./assets/animations/no_fishing_sign.webp" alt="">
+                        <img loading="lazy" class="no-fishing" draggable="false" src="./assets/animations/no_fishing_sign.webp" alt="">
                     </div>
                 </div>
             </div>
