--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
                     <img class="pier" loading="lazy" draggable="false" src="./assets/animations/pier.webp" alt="">
     
                     <div class="boat-container">
-                        <img loading="lazy" class="fishing-boat" draggable="false" src="./assets/animations/fishing_boat.webp" alt="">
+                        <img class="fishing-boat" draggable="false" src="./assets/animations/fishing_boat.webp" alt="">
                     </div>
     
                     <div class="no-fishing-container">
-                        <img loading="lazy" class="no-fishing" draggable="false" src="./assets/animations/no_fishing_sign.webp" alt="">
+                        <img class="no-fishing" draggable="false" src="./assets/animations/no_fishing_sign.webp" alt="">
                     </div>
                 </div>
             </div>
