--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="Aquatica"/>
     <meta property="og:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
     <meta property="og:description" content="Discover marine conservation efforts, learn about endangered ocean species, and find ways to protect coral reefs and marine ecosystems. Join the fight against ocean pollution and overfishing">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Roxaski/Aquatica/main/assets/open_graph/og_index.jpg">
+    <meta property="og:image" content="https://roxaski.github.io/Aquatica/assets/open_graph/og_index.jpg">
     <meta property="og:image:alt" content="Aquatica">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
