updated open graph meta tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
     <meta name="twitter:description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing.">
     <meta name="twitter:image" content="https://roxaski.github.io/Aquatica/assets/open_graph/og_index.jpg">
-    <meta name="twitter:image:alt" content="Aquatica | ocean conservation website featuring marine life protection">
+    <meta name="twitter:image:alt" content="Aquatica | Ocean Conservation & Marine Life Protection">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
