updated open graph meta tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquatica | Ocean Conservation & Marine Life Protection</title>
-    <meta name="description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing.">
+    <meta name="description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing">
     <meta name="apple-mobile-web-app-title" content="Aquatica"/>
     <meta name="theme-color" content="#062f3d">
     <meta property="og:locale" content="en_GB">
     <meta property="og:site_name" content="Aquatica"/>
     <meta property="og:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
-    <meta property="og:description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing.">
+    <meta property="og:description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing">
     <meta property="og:image" content="https://roxaski.github.io/Aquatica/assets/open_graph/og_index.jpg">
     <meta property="og:image:alt" content="Aquatica | Ocean Conservation & Marine Life Protection">
     <meta property="og:image:width" content="1200">
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website"/>
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
-    <meta name="twitter:description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing.">
+    <meta name="twitter:description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing">
     <meta name="twitter:image" content="https://roxaski.github.io/Aquatica/assets/open_graph/og_index.jpg">
     <meta name="twitter:image:alt" content="Aquatica | Ocean Conservation & Marine Life Protection">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
