minor adjustments to donate button, and removing deprecated meta tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Aquatica | Ocean Conservation & Marine Life Protection</title>
     <meta name="description" content="Discover marine conservation efforts and learn how to protect endangered ocean species, coral reefs, and marine ecosystems from pollution and overfishing">
     <meta name="apple-mobile-web-app-title" content="Aquatica"/>
-    <meta name="theme-color" content="#062f3d">
     <meta property="og:locale" content="en_GB">
     <meta property="og:site_name" content="Aquatica"/>
     <meta property="og:title" content="Aquatica | Ocean Conservation & Marine Life Protection">
@@ -68,6 +67,7 @@
                                50vw"
                         alt="great barrier reef">
                     </div>
+
                     <div class="right">
                         <h2>the great barrier reef</h2>
 
@@ -87,6 +87,7 @@
 
                         <p>As you can see this wonderful place is important to the preservation of our ocean, and you can help to make a change.</p>
                     </div>
+                    
                     <div class="right">
                         <img width="1920" height="1080" loading="lazy" draggable="false" 
                         src="./assets/index/barrier_reef_fish_extra_large.webp" 
@@ -262,10 +263,10 @@
                             <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
                         </defs>
                         <g class="waves-group">
-                            <use xlink:href="#wave-animation" x="48" y="0" fill="#385964"/>
-                            <use xlink:href="#wave-animation" x="5" y="2" fill="#123642"/>
-                            <use xlink:href="#wave-animation" x="52" y="5" fill="#094357"/>
-                            <use xlink:href="#wave-animation" x="50" y="7" fill="#102f39"/>
+                            <use href="#wave-animation" x="48" y="0" fill="#385964"/>
+                            <use href="#wave-animation" x="5" y="2" fill="#123642"/>
+                            <use href="#wave-animation" x="52" y="5" fill="#094357"/>
+                            <use href="#wave-animation" x="50" y="7" fill="#102f39"/>
                         </g>
                     </svg>
                 </div>
