minor adjustments for better readibility

--- a/index.html
+++ b/index.html
@@ -271,14 +271,20 @@
                     </svg>
                 </div>
                 <div class="foreground">
-                    <img class="pier" loading="lazy" draggable="false" src="./assets/animations/pier.webp" alt="">
+                    <img class="pier" loading="lazy" draggable="false" 
+                    src="./assets/animations/pier.webp" 
+                    alt="">
     
                     <div class="boat-container">
-                        <img class="fishing-boat" draggable="false" src="./assets/animations/fishing_boat.webp" alt="">
+                        <img class="fishing-boat" draggable="false" 
+                        src="./assets/animations/fishing_boat.webp" 
+                        alt="">
                     </div>
     
                     <div class="no-fishing-container">
-                        <img class="no-fishing" draggable="false" src="./assets/animations/no_fishing_sign.webp" alt="">
+                        <img class="no-fishing" draggable="false" 
+                        src="./assets/animations/no_fishing_sign.webp" 
+                        alt="">
                     </div>
                 </div>
             </div>
