removed unnecessary comments, along with other minor adjustments

--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <!-- Header -->
         <header>
             <ul>
                 <li><span>aquatica</span></li>
             </ul>
         </header>
 
-        <!-- Hero Image -->
         <div class="hero">
             <img width="1920" height="1080" class="bg" fetchpriority="high" draggable="false" 
             src="./assets/index/ocean_bg_extra_large.webp"
@@ -53,7 +51,6 @@
         </div>
 
         <main>
-            <!-- Great Barrier Reef -->
             <section>
                 <div class="grid-container">
                     <div class="left">
@@ -102,7 +99,6 @@
                 </div>
             </section>
 
-            <!-- Oceana Charity Donations -->
             <section>
                 <div class="banner" id="donate">
                     <h2>oceana</h2>
@@ -117,7 +113,6 @@
                 </div>
             </section>
 
-            <!-- Endangered Species -->
             <section>
                 <div class="grid-container">
                     <div class="left">
@@ -166,7 +161,6 @@
                 </div>
             </section>
 
-            <!-- Vulnerable / Risk of Extinction Species -->
             <section>
                 <div class="banner">
                     <h2>marine life</h2>
@@ -199,9 +193,9 @@
                         </div>
                     </div>
                 </div>
-
-            <!-- Look After The Environment -->
             </section>
+
+            <section>
                 <div class="grid-container">
                     <div class="left">
                         <img width="1920" height="1080" loading="lazy" draggable="false" 
@@ -245,8 +239,8 @@
                         alt="polluted beach">
                     </div>
                 </div>
+            </section>
 
-            <!-- Make a Change -->
             <section>
                 <div class="banner pier-margin">
                     <h2>make a change</h2>
@@ -255,7 +249,6 @@
                 </div>
             </section>
 
-            <!-- Animations -->
             <div class="animations">
                 <div class="waves">
                     <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRation="none" shape-rendering="auto">
@@ -288,47 +281,46 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Footer -->
-            <footer>
-                <div class="section">
-                    <ul>
-                        <li><span>overview</span></li>
-                        <li>pricing</li>
-                        <li>services</li>
-                        <li>career</li>
-                        <li>press kit</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <ul>
-                        <li><span>contact</span></li>
-                        <li>fax</li>
-                        <li>email</li>
-                        <li>phone</li>
-                        <li>contact form</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <ul>
-                        <li><span>about</span></li>
-                        <li>marine life</li>
-                        <li>science</li>
-                        <li>products</li>
-                        <li>equipment</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <ul>
-                        <li><span>socials</span></li>
-                        <li><i class="fa-brands fa-facebook"></i> facebook</li>
-                        <li><i class="fa-brands fa-instagram"></i> instagram</li>
-                        <li><i class="fa-brands fa-reddit"></i> reddit</li>
-                        <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
-                    </ul>
-                </div>
-            </footer>
         </main>
+
+        <footer>
+            <div class="section">
+                <ul>
+                    <li><span>overview</span></li>
+                    <li>pricing</li>
+                    <li>services</li>
+                    <li>career</li>
+                    <li>press kit</li>
+                </ul>
+            </div>
+            <div class="section">
+                <ul>
+                    <li><span>contact</span></li>
+                    <li>fax</li>
+                    <li>email</li>
+                    <li>phone</li>
+                    <li>contact form</li>
+                </ul>
+            </div>
+            <div class="section">
+                <ul>
+                    <li><span>about</span></li>
+                    <li>marine life</li>
+                    <li>science</li>
+                    <li>products</li>
+                    <li>equipment</li>
+                </ul>
+            </div>
+            <div class="section">
+                <ul>
+                    <li><span>socials</span></li>
+                    <li><i class="fa-brands fa-facebook"></i> facebook</li>
+                    <li><i class="fa-brands fa-instagram"></i> instagram</li>
+                    <li><i class="fa-brands fa-reddit"></i> reddit</li>
+                    <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
