minor accessibility adjustments

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     <p>Campaigning to restore our oceans to the way it once was, by increasing marine bio diversity and protecting our oceans for generations to come!</p>
 
-                    <div role="button" class="btn" aria-label="button that opens an external link">
+                    <div class="btn" aria-label="opens external link to oceana website's donation page">
                         <a target="_blank" href="https://oceana.org/resources/ways-to-give-donate-now/">donate</a>
                     </div>
                 </div>
