minor performance improvements

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="./site.webmanifest">
-    <script async defer src="https://kit.fontawesome.com/2d21b2aa33.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script defer src="./script.js"></script>
 </head>
@@ -103,12 +102,12 @@
                 <div class="banner" id="donate">
                     <h2>oceana</h2>
 
-                    <h2>protecting the world's oceans</h2>
+                    <h3>protecting the world's oceans</h3>
 
                     <p>Campaigning to restore our oceans to the way it once was, by increasing marine bio diversity and protecting our oceans for generations to come!</p>
 
-                    <div class="btn" aria-label="opens external link to oceana website's donation page">
-                        <a target="_blank" href="https://oceana.org/resources/ways-to-give-donate-now/">donate</a>
+                    <div class="btn">
+                        <a target="_blank" href="https://oceana.org/resources/ways-to-give-donate-now/" aria-label="opens link to oceana donation page in new tab">donate</a>
                     </div>
                 </div>
             </section>
@@ -251,7 +250,7 @@
 
             <div class="animations">
                 <div class="waves">
-                    <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRation="none" shape-rendering="auto">
+                    <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRatio="none" shape-rendering="auto">
                         <defs>
                             <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
                         </defs>
@@ -314,10 +313,10 @@
             <div class="section">
                 <ul>
                     <li><span>socials</span></li>
-                    <li><i class="fa-brands fa-facebook"></i> facebook</li>
-                    <li><i class="fa-brands fa-instagram"></i> instagram</li>
-                    <li><i class="fa-brands fa-reddit"></i> reddit</li>
-                    <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
+                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/facebook.svg" alt="">facebook</li>
+                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/instagram.svg" alt="">instagram</li>
+                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/reddit.svg" alt="">reddit</li>
+                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/tiktok.svg" alt="">tik-tok</li>
                 </ul>
             </div>
         </footer>
