--- a/index.html
+++ b/index.html
@@ -313,10 +313,31 @@
             <div class="section">
                 <ul>
                     <li><span>socials</span></li>
-                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/facebook.svg" alt="">facebook</li>
-                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/instagram.svg" alt="">instagram</li>
-                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/reddit.svg" alt="">reddit</li>
-                    <li><img width="17" height="17" draggable="false" loading="lazy" src="./assets/svg/tiktok.svg" alt="">tik-tok</li>
+                    <li>
+                        <img loading="lazy" width="17" height="17" draggable="false" 
+                        src="./assets/svg/facebook.svg" 
+                        alt="">
+                        facebook
+                    </li>
+
+                    <li><img loading="lazy" width="17" height="17" draggable="false" 
+                        src="./assets/svg/instagram.svg" 
+                        alt="">
+                        instagram
+                    </li>
+
+                    <li><img loading="lazy" width="17" height="17" draggable="false" 
+                        src="./assets/svg/reddit.svg" 
+                        alt="">
+                        reddit
+                    </li>
+
+                    <li>
+                        <img loading="lazy" width="17" height="17" draggable="false" 
+                        src="./assets/svg/tiktok.svg" 
+                        alt="">
+                        tik-tok
+                    </li>
                 </ul>
             </div>
         </footer>
