updated folder titles

--- a/index.html
+++ b/index.html
@@ -315,26 +315,26 @@
                     <li><span>socials</span></li>
                     <li>
                         <img loading="lazy" width="17" height="17" draggable="false" 
-                        src="./assets/svg/facebook.svg" 
+                        src="./assets/icons/facebook.svg" 
                         alt="">
                         facebook
                     </li>
 
                     <li><img loading="lazy" width="17" height="17" draggable="false" 
-                        src="./assets/svg/instagram.svg" 
+                        src="./assets/icons/instagram.svg" 
                         alt="">
                         instagram
                     </li>
 
                     <li><img loading="lazy" width="17" height="17" draggable="false" 
-                        src="./assets/svg/reddit.svg" 
+                        src="./assets/icons/reddit.svg" 
                         alt="">
                         reddit
                     </li>
 
                     <li>
                         <img loading="lazy" width="17" height="17" draggable="false" 
-                        src="./assets/svg/tiktok.svg" 
+                        src="./assets/icons/tiktok.svg" 
                         alt="">
                         tik-tok
                     </li>
