--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             <div class="animations">
                 <div class="waves">
-                    <svg class="waves-svg" viewBox="0 25 150 15" preserveAspectRatio="none" shape-rendering="auto">
+                    <svg class="waves-svg" draggable="false" viewBox="0 25 150 15" preserveAspectRatio="none" shape-rendering="auto">
                         <defs>
                             <path id="wave-animation" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
                         </defs>
